envoy-gateway-system/namespace-envoy-gateway-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/manifest-id: acc9cf0bb6bddd1f
